Update docs for SDK/test maintenance; add TestedSdkVersion
- Add fork-only guides: README-AM-UPDATE-API.md (SDK update workflow) and README-AM-UPDATE-NUGET.md (NuGet package update workflow)
- Protect test project and solution file in .openapi-generator-ignore
- Expand README.md with post-upstream-sync checklist and troubleshooting
- Add TestedSdkVersion constant to TestDataFactory.cs for SDK/test alignment
- Bump MSTest in test project to 4.1.0 for latest test framework support

--- a/src/Io.Gate.GateApi.Tests/Io.Gate.GateApi.Tests.csproj
+++ b/src/Io.Gate.GateApi.Tests/Io.Gate.GateApi.Tests.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MSTest" Version="3.*" />
+    <PackageReference Include="MSTest" Version="4.1.0" />
     <PackageReference Include="Moq" Version="4.*" />
     <PackageReference Include="coverlet.collector" Version="6.*">
       <PrivateAssets>all</PrivateAssets>
